# MacOS_RootDiskUsageCheck_DeleteOrphan_WarnBigSize_Directory

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
macscan/: __init__.py  __main__.py  analyze.py  apps.py  cli.py  paths.py  report.py  scan.py
tests/: test_analyze.py  test_scan.py
