[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "macscan"
version = "0.1.0"
description = "macOS root-disk usage checker — read-only reporter for big items, orphans, and stale caches"
requires-python = ">=3.9"
authors = [{ name = "macscan" }]

[project.scripts]
macscan = "macscan.cli:main"

[tool.setuptools.packages.find]
include = ["macscan*"]
